fix: navbar layout and Contact us wrapping issue and center nav

--- a/go_space/frontend/css/style.css
+++ b/go_space/frontend/css/style.css
@@ -11,6 +11,8 @@ header {
   gap: 20px;
   margin-left: 0;
   margin-top: 0;
+  flex: 1;
+  justify-content: center;
 }
 
 .menu {
